Commit with some updates in tests